[tool.poetry]
name = "spider"
version = "0.1.0"
description = ""
authors = ["PuzzleMoon <32855965+puzzlemoondev@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
