[tool.poetry]
name = "pndl"
version = "0.1.0"
description = "Simple PhysioNet crawler & downloader"
authors = ["PuzzleMoon <32855965+puzzlemoondev@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aria2p = "^0.11.1"
lxml = "^4.7.1"
requests = "^2.27.1"

[tool.poetry.scripts]
pndl = "pndl.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
